--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "node-example",
   "version": "1.0.0",
-  "description": "This example is so cool.",
+  "description": "Server for experiments",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "example",
-    "heroku"
   ],
   "author": "Kevin-Mastro",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "4.1.1"
+  }
 }
